make it responsive

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -73,3 +73,19 @@ section .colors .white{background-color: #f1f1f1;height: 50px;width: 50px;border
     width: 100px;
     margin-right: 40px;
 }
+@media (max-width:1000px) {
+    nav{
+        display: block;
+    }
+    nav h1{
+        text-align: center;
+    }
+    nav .containerofa{
+        display: none;
+    }
+}
+@media (max-width:651px) {
+    aside img{
+        width: 100px;
+    }
+}
